Fix T46712: Crash while rendering Freestyle scene

The issue was in fact caused by missing initialization of motion blur shutter
curve for all new scenes when not using "Copy Scene Settings" option.